database configuration and adding entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.servlet.context-path=/task-manager
 spring.application.name=Task Management System
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+spring.profiles.active=dev
+#liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
